- wxDC::BeginDrawing() and wxDC::EndDrawing() deprecated, don't use them.


Major new features in 2.7 release
---------------------------------

- New AUI library supporting docking windows and much more.


2.7.2
-----

All:

- Added wxFFile overload to wxFileName::CreateTemporaryFileName().
- Added wxBackingFile and wxBackedInputStream.
- Added GetTempDir() to wxFileName and wxStandardPaths.

All (GUI): 

- wxMemoryDC constructor now optionally accepts a wxBitmap parameter,
  calling SelectObject itself if a valid bitmap is passed.
- Reverted wxBuffered[Paint]DC to pre 2.7.1 state, added
  wxAutoBufferedPaintDC and wxAutoBufferedPaintDCFactory.
- Renamed wxProgressDialog::UpdatePulse() to just Pulse().
- Added wxCollapsiblePane (Francesco Montorsi).
- Added wxSimpleHtmlListBox (Francesco Montorsi).

Unix Ports:

- Added autopackage for wxGTK and an example of using autopackage for a wx
  program (Francesco Montorsi).

wxGTK:

- More RTL work.
- Support wxALWAYS_SHOW_SB.
- Speed up MIME types loading. Only the GNOME database should be loaded under
  GNOME etc. For this, the code queries the X11 session protocol.


2.7.1
-----

All:

- Added wxDir::FindFirst() (Francesco Montorsi).
- Added wxPlatformInfo class (Francesco Montorsi).
- Added wxLocale::IsAvailable() (Creighton).
- Added Malay translations (Mahrazi Mohd Kamal)
- Added reference counting for wxVariant
- For consistency, all classes having Ok() method now also have IsOk() one, use
  of the latter form is preferred although the former hasn't been deprecated yet.
- Added wxFileName::Is(Dir|File)(Writ|Read|Execut)able() (Francesco Montorsi).
- Added wxFileName::GetSize() and GetHumanReadableSize() (Francesco Montorsi).
- Added wxSizer::Replace (Francesco Montorsi).
- wxXmlDocument can now optionally preserve whitespace (Francesco Montorsi).
- Added wxBookCtrl::ChangeSelection() and wxTextCtrl::ChangeValue() to provide
  event-free alternatives to SetSelection() and SetValue() functions; see the