@@ -212,6 +212,7 @@ MONODLL_OBJECTS =  \
 	$(OBJS)\monodll_filtall.o \
 	$(OBJS)\monodll_filtfind.o \
 	$(OBJS)\monodll_fmapbase.o \
+	$(OBJS)\monodll_fs_filter.o \
 	$(OBJS)\monodll_fs_zip.o \
 	$(OBJS)\monodll_hash.o \
 	$(OBJS)\monodll_hashmap.o \
@@ -328,6 +329,7 @@ MONOLIB_OBJECTS =  \
 	$(OBJS)\monolib_filtall.o \
 	$(OBJS)\monolib_filtfind.o \
 	$(OBJS)\monolib_fmapbase.o \
+	$(OBJS)\monolib_fs_filter.o \
 	$(OBJS)\monolib_fs_zip.o \
 	$(OBJS)\monolib_hash.o \
 	$(OBJS)\monolib_hashmap.o \
@@ -446,6 +448,7 @@ BASEDLL_OBJECTS =  \
 	$(OBJS)\basedll_filtall.o \
 	$(OBJS)\basedll_filtfind.o \
 	$(OBJS)\basedll_fmapbase.o \
+	$(OBJS)\basedll_fs_filter.o \
 	$(OBJS)\basedll_fs_zip.o \
 	$(OBJS)\basedll_hash.o \
 	$(OBJS)\basedll_hashmap.o \
@@ -547,6 +550,7 @@ BASELIB_OBJECTS =  \
 	$(OBJS)\baselib_filtall.o \
 	$(OBJS)\baselib_filtfind.o \
 	$(OBJS)\baselib_fmapbase.o \
+	$(OBJS)\baselib_fs_filter.o \
 	$(OBJS)\baselib_fs_zip.o \
 	$(OBJS)\baselib_hash.o \
 	$(OBJS)\baselib_hashmap.o \
@@ -4666,6 +4670,9 @@ $(OBJS)\monodll_filtfind.o: ../../src/common/filtfind.cpp
 $(OBJS)\monodll_fmapbase.o: ../../src/common/fmapbase.cpp
 	$(CXX) -c -o $@ $(MONODLL_CXXFLAGS) $(CPPDEPS) $<
 
+$(OBJS)\monodll_fs_filter.o: ../../src/common/fs_filter.cpp
+	$(CXX) -c -o $@ $(MONODLL_CXXFLAGS) $(CPPDEPS) $<
+
 $(OBJS)\monodll_fs_zip.o: ../../src/common/fs_zip.cpp
 	$(CXX) -c -o $@ $(MONODLL_CXXFLAGS) $(CPPDEPS) $<
 
@@ -6725,6 +6732,9 @@ $(OBJS)\monolib_filtfind.o: ../../src/common/filtfind.cpp
 	$(CXX) -c -o $@ $(MONOLIB_CXXFLAGS) $(CPPDEPS) $<
 
 $(OBJS)\monolib_fmapbase.o: ../../src/common/fmapbase.cpp
+	$(CXX) -c -o $@ $(MONOLIB_CXXFLAGS) $(CPPDEPS) $<
+
+$(OBJS)\monolib_fs_filter.o: ../../src/common/fs_filter.cpp
 	$(CXX) -c -o $@ $(MONOLIB_CXXFLAGS) $(CPPDEPS) $<
 
 $(OBJS)\monolib_fs_zip.o: ../../src/common/fs_zip.cpp
@@ -8791,6 +8801,9 @@ $(OBJS)\basedll_filtfind.o: ../../src/common/filtfind.cpp
 $(OBJS)\basedll_fmapbase.o: ../../src/common/fmapbase.cpp
 	$(CXX) -c -o $@ $(BASEDLL_CXXFLAGS) $(CPPDEPS) $<
 
+$(OBJS)\basedll_fs_filter.o: ../../src/common/fs_filter.cpp
+	$(CXX) -c -o $@ $(BASEDLL_CXXFLAGS) $(CPPDEPS) $<
+
 $(OBJS)\basedll_fs_zip.o: ../../src/common/fs_zip.cpp
 	$(CXX) -c -o $@ $(BASEDLL_CXXFLAGS) $(CPPDEPS) $<
 
@@ -9044,6 +9057,9 @@ $(OBJS)\baselib_filtfind.o: ../../src/common/filtfind.cpp
 	$(CXX) -c -o $@ $(BASELIB_CXXFLAGS) $(CPPDEPS) $<
 
 $(OBJS)\baselib_fmapbase.o: ../../src/common/fmapbase.cpp
+	$(CXX) -c -o $@ $(BASELIB_CXXFLAGS) $(CPPDEPS) $<
+
+$(OBJS)\baselib_fs_filter.o: ../../src/common/fs_filter.cpp
 	$(CXX) -c -o $@ $(BASELIB_CXXFLAGS) $(CPPDEPS) $<
 
 $(OBJS)\baselib_fs_zip.o: ../../src/common/fs_zip.cpp
